--- a/istilo.css
+++ b/istilo.css
@@ -6,7 +6,7 @@
 
 
 body{
-    background-image:linear-gradient(45deg,rgb(64, 0, 255),rgb(0, 255, 204));
+    background-image:linear-gradient(45deg,rgb(0, 106, 255),black);
     z-index: 0;
 
 }
@@ -18,7 +18,7 @@ h1{
 .header{
     width: 100%;
     height: 50px;
-    background-color: rgb(0, 0, 0);
+    background-image:linear-gradient(45deg,rgb(0, 106, 255),black);
     display: flex;
     box-shadow: 0 0 10px;
     justify-content: space-between;
