--- a/rodape.css
+++ b/rodape.css
@@ -5,7 +5,7 @@
     font-family: 'Poppins', sans-serif;
 }
 footer{
-    background-color: rgb(23, 23, 54);
+    background-image:linear-gradient(45deg,rgb(0, 106, 255),rgb(21, 40, 150));
     padding: 50px 0;
 }
 .cf{
